feat: 第四阶段工程化完成
- SpringDoc OpenAPI (Swagger UI): 所有 Controller 添加 @Operation/@Tag
- 安全配置: Swagger 路径加入白名单，CORS 支持环境变量配置
- Flyway 迁移脚本: V1__init_schema.sql 完整建表脚本
- Docker: 多阶段构建 Dockerfile.backend/frontend + nginx.conf + docker-compose.yml
- 生产配置: application-prod.properties（环境变量注入所有敏感配置）
- 单元测试: QuestionControllerTest + UserStatsServiceTest + H2 测试库